aws-terraform-part-2/modules/network/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = var.cidr_block

  tags = {
    Name = var.vpc_name
    Environment = var.environment
  }
}
